<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@drawable/gradient_background"
    tools:context=".ErrorActivity">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Inicio_Sesion"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="250dp"
        android:textColor="@android:color/white"/>

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleTextView"
        android:layout_marginTop="138dp"
        android:autofillHints=""
        android:background="@android:color/white"
        android:hint="@string/ingreso_email"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/emailErrorTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/correo_incorrecto"
        android:textColor="@android:color/holo_red_light"
        android:layout_below="@id/emailEditText"
        android:layout_marginTop="4dp"/>

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailErrorTextView"
        android:layout_marginTop="62dp"
        android:autofillHints=""
        android:background="@android:color/white"
        android:hint="@string/ingreso_contraseña"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/passwordErrorTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contraseña_incorrecta"
        android:textColor="@android:color/holo_red_light"
        android:layout_below="@id/passwordEditText"
        android:layout_marginTop="4dp"/>

    <Button
        android:id="@+id/retryButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordErrorTextView"
        android:layout_marginTop="170dp"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:text="@string/intentalo_de_nuevo" />
</RelativeLayout>