<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titleAPP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:text="@string/Inicio_Sesion"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleAPP"
        android:layout_marginTop="138dp"
        android:background="@android:color/white"
        android:hint="@string/ingreso_email"
        android:inputType="textEmailAddress"
        android:autofillHints="" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailEditText"
        android:layout_marginTop="62dp"
        android:background="@android:color/white"
        android:hint="@string/ingreso_contraseña"
        android:inputType="textPassword"
        android:autofillHints="" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordEditText"
        android:layout_marginTop="170dp"
        android:backgroundTint="@android:color/darker_gray"
        android:text="@string/ingresar" />
</RelativeLayout>